# mcp-stock-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.template  pyproject.toml  server.py
utils/: __init__.py  my_module.py  schema.py  support_resistance.py  ths.py  tools.py  validate.py
